ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: dashboard.default-tenant.app.<domain>
  name: pipelines
  namespace: <namespace>
spec:
  rules:
  - host: dashboard.default-tenant.app.<domain>
    http:
      paths:
      - backend:
          serviceName: ml-pipeline-ui
          servicePort: 80
        path: /ml-pipelines(/|$)(.*)
  tls:
  - hosts:
    - dashboard.default-tenant.app.<domain>
    secretName: ingress-tls
