ing_old.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: pipelines-old
  namespace: <namespace>
spec:
  rules:
  - host: pipelines.default-tenant.app.<domain>
    http:
      paths:
      - backend:
          serviceName: ml-pipeline-ui
          servicePort: 80
        path: /
  tls:
  - hosts:
    - pipelines.default-tenant.app.<domain>
    secretName: ingress-tls
